[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/block.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 26.6797

[sub_resource type="CapsuleShape2D" id=4]
radius = 56.9445
height = 28.2047

[sub_resource type="CircleShape2D" id=2]
radius = 45.7629

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[node name="player" type="Node2D" groups=[
"mortal",
"player",
"targetable",
]]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="body/Sprite"]
position = Vector2( 2.0146, -73.7344 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )

[node name="front" type="Position2D" parent="body"]
position = Vector2( 0, -50 )

[node name="Area2D" type="Area2D" parent="body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/Area2D"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="range" type="Area2D" parent="body"]
visible = false
monitoring = false

[node name="range" type="Sprite" parent="body/range"]
modulate = Color( 0.486275, 0.615686, 0.780392, 0.313726 )
show_behind_parent = true
scale = Vector2( 0.7, 0.7 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/range"]
visible = false
shape = SubResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="body"]
shape = SubResource( 3 )
shape_centered = false

[node name="Camera2D" type="Camera2D" parent="body"]
scale = Vector2( 1, 1 )
current = true
zoom = Vector2( 1.2, 1.2 )
limit_left = -1409
limit_top = -960
limit_right = 1770
limit_bottom = 1120
limit_smoothed = true
[connection signal="area_entered" from="body/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="body/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="body/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="body/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="body/range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="body/range" to="." method="_on_range_body_exited"]
[connection signal="pressed" from="body/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
